tdf#100209: Master slide of master slide makes no sense

so just disable the controls when in master view

Change-Id: I9551cc5c0d123e58555d248b78859c1f77de6690
Reviewed-on: https://gerrit.libreoffice.org/26276
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>